# ramp

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Drake.ipynb  LieGroups.ipynb  README.md  Untitled.ipynb  pyproject.toml  pytest.ini  ruff.toml  test.py
.cache/calibration/so100/: main_follower.json  main_leader.json
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml
examples/: acrobot_lqr.py  airplane_motion_planning.py  attach_models_demo.py  casadi_robot.py  decorative_geometries.py  humanoid.py  ik.py  interactive_ik.py  mj_ik.py  mj_interactive.py  motion_planning.py  mujoco_model.py  null_space_jacobian.py  so_arm100_motion_planning.py  ur5e_gizmo.py
mujoco_simulator_py/: README.md  pyproject.toml
mujoco_simulator_py/examples/: acrobot.xml  acrobot_lqr.py  attach_models_demo.py  decorative_geometries.py
mujoco_simulator_py/mujoco_simulator_py/: mocap.xml  mujoco_interface.py
mujoco_simulator_py/tests/: mujoco_interface_test.py
ramp/: __init__.py  anytime_path_shortening.py  casadi_robot_model.py  compute_disable_collisions.py  constants.py  exceptions.py  hardware_interface.py  ik_solver.py  mj_robot.py  mocap.xml  model_info.py  motion_planner.py  mujoco_interface.py  pinocchio_utils.py  robot.py  robot_model.py  robot_state.py  trajectory_smoothing.py  visualizer.py
robot_learning/: README.md  SetupGripper.ipynb  data_collection.py  follower_arm.py  generate_udev_rule.bash  pyproject.toml  realsense.py  teleoperate.py
robot_learning/robot_learning/: __init__.py  constants.py  keyboard_listener.py  utils.py
robots/: floating.urdf  planar.urdf
robots/acrobot/: acrobot.srdf.xacro  acrobot.xml  configs.toml  scene.xml
robots/fr3/: configs.toml  fr3.srdf.xacro
robots/fr3_robotiq/: configs.toml  fr3.srdf.xacro  fr3.urdf.xacro
robots/kinova/: configs.toml  kinova.srdf.xacro  kinova.urdf.xacro
robots/panda/: configs.toml  panda.srdf.xacro
robots/panda_mj/: configs.toml
robots/planar_rrr/: configs.toml  robot.urdf.xacro
robots/rrr/: configs.toml  dubins_configs.toml  floating_configs.toml  owen_configs.toml  planar_configs.toml  reeds_shepp_configs.toml  rrr.srdf.xacro  rrr.urdf.xacro  vana_configs.toml  vana_owen_configs.toml
robots/rrr_mj/: configs.toml  rrr.xml  scene.xml
robots/so_arm100/: configs.toml  so_arm100.srdf.xacro
robots/unitree_h1/: configs.toml  h1.srdf.xacro
robots/ur5e/: configs.toml  ur.srdf.xacro  ur.urdf.xacro
src/ramp/: __init__.py  compute_disable_collisions.py  constants.py  exceptions.py  model_info.py  motion_planner.py  pinocchio_utils.py  robot_model.py  robot_state.py  trajectory_smoothing.py  visualizer.py
src/ramp/visualizers/: __init__.py  meshcat.py  viser.py
tests/: disable_collisions_test.py  double_pendulum.toml  double_pendulum.urdf  examples_test.py  extra_acceleration_joint.toml  group_joint_mimic.toml  mimic_test.py  missing_acceleration_joint.toml  motion_planner_test.py  mujoco_interface_test.py  non_existing_base_link.toml  non_existing_group_joint.toml  non_existing_robot_descriptions.toml  panda_configs.toml  panda_mj_configs.toml  robot_state_test.py  robot_test.py  test_disable_collisions.py  test_examples.py  test_motion_planner.py  test_robot.py  test_robot_state.py
