[project]
name = "ramp"
version = "0.1.0"
description = "Robot-Agnostic Motion Planning Library"
readme = "README.md"
authors = [{ name = "JafarAbdi", email = "jafar.uruc@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "loop-rate-limiters>=1.1.2",
  "meshcat>=0.3.2",
  "meshcat-shapes>=1.0.0",
  "numpy>=2.0",
  "pin-pink>=3.3.0",
  "rich>=14.0.0",
  "time_optimal_trajectory_generation_py @ git+https://github.com/JafarAbdi/time_optimal_trajectory_generation_py",
  "urdf-parser-py>=0.0.4",
  "xacrodoc>=1.1.2",
  "toml>=0.10.2",
  "pin>=3.7.0",
  # "ompl>=1.7.0", This is segfaulting
  "qpsolvers[open-source-solvers]>=4.8.0",
  "ompl",
  "viser>=1.0.0",
  "matplotlib>=3.10.3",
  "drake>=1.43.0",
]

[project.scripts]
model_info = "ramp.model_info:main"
compute_disable_collisions = "ramp.compute_disable_collisions:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "jupyterlab>=4.4.5",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "robot-descriptions>=1.20.0",
]

[tool.uv.sources]
ompl = [
  { url = "https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.8.0-cp311-cp311-manylinux_2_28_x86_64.whl", marker = "python_version == '3.11'" },
  { url = "https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.8.0-cp312-cp312-manylinux_2_28_x86_64.whl", marker = "python_version == '3.12'" },
]
